# accentedness-scalar-routing

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: DECISIONS.md  DIAGNOSIS-batching-padding-waste.md  DIAGNOSIS-pilot-to-v2.md  DIAGNOSIS-round2-to-round3.md  DIAGNOSIS-stage2-to-stage3.md  OPEN-QUESTIONS.md  accent-routing-assignment.txt  accent-routing-scoping.md  accent-routing-sota.md  ai-use-log.md  planning-prompt_initial-plan.md  planning-prompt_round2-extensions.md  planning-prompt_round3-headroom.md  research-objective.md  six-proposals.md  what-is-accent.md
experiments/: COMPARISON.md  INDEX.md
models/: CHECKPOINT-NOTES.md
scripts/: compare.py  diag_ddp_params.py  diagnose.py  eval_accent_adapted.py  eval_composite.py  eval_ext1.py  eval_ext2.py  eval_ext3.py  eval_ext4.py  eval_ext5.py  eval_headroom_grid.py  eval_temporal.py  evaluate.py  extract_acoustic_features.py  extract_features.py  extract_features_stats.py  make_report.py  plot_headroom_sweep.py  prepare_data.py  rescore_pilot.py  run_asr.py  run_asr_adapted.py  run_asr_grid.py  run_baselines.py  run_flywheel.py  train_accent_classifier.py  train_ddp.py  train_learning_curve.py  train_multitask.py  train_probe.py  train_probe_ext1.py  train_probe_stats.py  verify_batching_parity.py  verify_features_device_parity.py
tests/: test_e2e_tiny.py  test_eval_common.py  test_eval_common_r3.py  test_smoke.py
writeup/: writeup-v1.md  writeup-v2.md  writeup-v3.md  writeup-v4-detailed.md  writeup-v5-final-brief.md  writeup.md
(+56 files in other folders)
