[project]
name = "accentedness-routing"
version = "0.1.0"
description = "Accentedness-scalar routing for English ASR"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "mlx-whisper>=0.4.0",
    "jiwer>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/accentedness_routing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300

[tool.ruff]
line-length = 100
target-version = "py310"
